Adding project references and updating UI

--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
     <div class="col-md-3">
         <p class="lead">FSharp PhoneCat</p>
         <div class="list-group">
-            <a href="#" class="list-group-item">Samsung</a>
-            <a href="#" class="list-group-item">Motorola</a>
-            <a href="#" class="list-group-item">T-Mobile</a>
+            <a href="#" class="list-group-item">Category 1</a>
+            <a href="#" class="list-group-item">Category 2</a>
+            <a href="#" class="list-group-item">Category 3</a>
         </div>
     </div>
 
