--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Tutorial</a>
+                        <a href="http://blog.tamizhvendan.in/blog/2014/12/10/web-application-development-in-fsharp-using-asp-dot-net-mvc/">Tutorial</a>
                     </li>
                     <li>
-                        <a href="#">Source</a>
+                        <a href="https://github.com/tamizhvendan/fsharp-phonecat">Source</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="http://about.me/tamizhvendan">Contact</a>
                     </li>
                 </ul>
             </div>
