--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -20,15 +20,12 @@
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                     </ol>
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="slide-image" src="http://placehold.it/800x300" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="slide-image" src="http://placehold.it/800x300" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                    <div class="carousel-inner" data-bind="foreach: promotionItems">
+                        <div class="item" data-bind="attr: { class : active }">
+                            <div class="carousel-caption">
+                                <a data-bind="attr : { href : phoneUrl }, text: name"></a>
+                            </div>
+                            <img class="slide-image" data-bind="attr:  { src : imageUrl}" />
                         </div>
                     </div>
                     <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -170,5 +167,12 @@
         </div>
 
     </div>
+    
+    
 
 </div>
+
+
+@section scripts {
+    <script src="~/Scripts/homePage.js"></script>
+}
