--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -66,6 +66,7 @@
   @RenderSection("scripts", required: false)
   <script src="~/Scripts/jquery.signalR-2.1.2.js"></script>
   <script src="~/signalr/hubs"></script>
+  <script src="~/Scripts/jquery.noty.packaged.min.js"></script>
   <script src="~/Scripts/recommendation.js"></script>
 </body>
 </html>
