Adding Search Page

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li>
+            <a href="@Url.Action("Search", "Phone")">Phone Search</a>
+          </li>
+          <li>
             <a href="http://blog.tamizhvendan.in/blog/2014/12/10/web-application-development-in-fsharp-using-asp-dot-net-mvc/">Tutorial</a>
           </li>
           <li>
