--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -63,6 +63,11 @@
 
   </div>
 
+  <script type="text/javascript">
+    window.PhoneCat = window.PhoneCat || {};
+    window.PhoneCat.siteName = @Url.Content("~/");
+  </script>
+
   @Scripts.Render("~/bundles/jquery")
   @Scripts.Render("~/bundles/bootstrap")
   @Scripts.Render("~/bundles/knockout")
