Refactoring AST of Search Filter

--- a/Web/Views/Phone/Search.cshtml
+++ b/Web/Views/Phone/Search.cshtml
@@ -5,8 +5,8 @@
 <div class="row">
   <div class="bs-callout bs-callout-info">
     <h4>Search Query Syntax</h4>
-    <p>Available Search filters : <code>screen</code>, <code>weight</code>, <code>ram</code>. <code>;</code> can be used to specify multiple filters. Each search filter should be accompanied with a value filter and its corresponding unit of measure. Search filter and value filter are seperated using ':' </p>
-    <p>Corresponding Unit of Measures <code>:</code> inch for screen, g for weight, mb for ram </p>
+    <p>Available Search filters : <code>screen</code>, <code>weight</code>, <code>ram</code>. <code>;</code> can be used to specify multiple filters. Each search filter should be accompanied with a value filter and its corresponding unit of measure. Search filter and value filter are seperated using <code>:</code> </p>
+    <p>Corresponding Unit of Measures : inch for screen, g for weight, mb for ram </p>
     <p>Available Value filters : value <code>{value}</code> greaterThan <code>>{value}{unitOfMeasure}</code> and range <code>>{value}-{value}{unitOfMeasure}</code></p>
     <p>Sample inputs</p>
     <p> <code>weight:>300g</code> </p>
