--- a/Web/Views/Authentication/Login.cshtml
+++ b/Web/Views/Authentication/Login.cshtml
@@ -4,6 +4,7 @@
 @using (Html.BeginForm("Login", "Authentication", FormMethod.Post, new { @class = "form-horizontal" }))
 {
   @Html.AntiForgeryToken()
+  @Html.ValidationSummary()
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
     <div class="col-sm-10">
