--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -43,11 +43,29 @@
         
         @if (Request.IsAuthenticated)
         {
-          <li><a href="@Url.Action("Logout","Authentication")">@User.Identity.Name</a></li>
+          <li class="dropdown open">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="fa fa-user"></i> 
+            @User.Identity.Name <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="@Url.Action("Logout","Authentication")"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+              </li>
+            </ul>
+          </li>
         }
         else
         {
-          <li><a href="@Url.Action("Login","Authentication")">Login</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="fa fa-user"></i> Guest <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="@Url.Action("Login","Authentication")"><i class="fa fa-fw fa-bank"></i> Log In</a>
+              </li>
+              <li>
+                <a href="@Url.Action("Register","Authentication")"><i class="fa fa-fw fa-laptop"></i>Register</a>
+              </li>
+            </ul>
+          </li>
         }
         
       </ul>
