--- a/Web/Views/Authentication/Register.cshtml
+++ b/Web/Views/Authentication/Register.cshtml
@@ -8,7 +8,7 @@
   <div class="form-group">
     <label for="Email" class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
-      @Html.TextBoxFor(m => m.Name, new { @class = "form-control", placholder = "Email" })
+      @Html.TextBoxFor(m => m.Name, new { @class = "form-control", placholder = "Name" })
     </div>
   </div>
   <div class="form-group">
