--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         
         @if (Request.IsAuthenticated)
         {
-          <li class="dropdown open">
+          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="fa fa-user"></i> 
             @User.Identity.Name <b class="caret"></b></a>
             <ul class="dropdown-menu">
