Fixing build script issue

--- a/Web/Views/Authentication/Login.cshtml
+++ b/Web/Views/Authentication/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PhoneCat.Web.Controllers.LoginViewModel
 
-
+<h3>Login</h3>
 @using (Html.BeginForm("Login", "Authentication", FormMethod.Post, new { @class = "form-horizontal" }))
 {
   @Html.AntiForgeryToken()
