--- a/Web/Views/Authentication/Register.cshtml
+++ b/Web/Views/Authentication/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@model PhoneCat.Web.Controllers.RegisterViewModel
 
+<h3>Register New User</h3>
 
 @using (Html.BeginForm("Register", "Authentication", FormMethod.Post, new { @class = "form-horizontal" }))
 {
