--- a/Web/Views/Authentication/Register.cshtml
+++ b/Web/Views/Authentication/Register.cshtml
@@ -26,7 +26,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Log in</button>
+      <button type="submit" class="btn btn-primary">Create</button>
     </div>
   </div>
 }
