--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -25,34 +25,37 @@
         <a class="navbar-brand" href="@Url.Action("Index", "Home")">PhoneCat Powered By F#</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="@Url.Action("Search", "Phone")">Phone Search</a>
-          </li>
-          <li>
-            <a href="http://blog.tamizhvendan.in/blog/2014/12/10/web-application-development-in-fsharp-using-asp-dot-net-mvc/">Tutorial</a>
-          </li>
-          <li>
-            <a href="https://github.com/tamizhvendan/fsharp-phonecat">Source</a>
-          </li>
-          <li>
-            <a href="http://about.me/tamizhvendan">Contact</a>
-          </li>
-        </ul>
-      
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="@Url.Action("Search", "Phone")">Phone Search</a>
+        </li>
+        <li>
+          <a href="http://blog.tamizhvendan.in/blog/2014/12/10/web-application-development-in-fsharp-using-asp-dot-net-mvc/">Tutorial</a>
+        </li>
+        <li>
+          <a href="https://github.com/tamizhvendan/fsharp-phonecat">Source</a>
+        </li>
+        <li>
+          <a href="http://about.me/tamizhvendan">Contact</a>
+        </li>
+      </ul>
+
 
       <ul class="nav navbar-nav navbar-right top-nav">
-        
+
         @if (Request.IsAuthenticated)
         {
           var identity = User.Identity as ClaimsIdentity;
           var name = identity.FindFirst(ClaimTypes.GivenName).Value;
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="fa fa-user"></i> 
-             @name<b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+              <i class="fa fa-user"></i>@name
+            </a>
             <ul class="dropdown-menu">
               <li>
-                <a href="@Url.Action("Logout","Authentication")"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                <a href="@Url.Action("Logout","Authentication")">
+                  <i class="fa fa-fw fa-power-off"></i> Log Out
+                </a>
               </li>
             </ul>
           </li>
@@ -60,23 +63,29 @@
         else
         {
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="fa fa-user"></i> Guest <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+              <i class="fa fa-user"></i> Guest
+            </a>
             <ul class="dropdown-menu">
               <li>
-                <a href="@Url.Action("Login","Authentication")"><i class="fa fa-fw fa-bank"></i> Log In</a>
+                <a href="@Url.Action("Login","Authentication")">
+                  <i class="fa fa-fw fa-bank"></i> Log In
+                </a>
               </li>
               <li>
-                <a href="@Url.Action("Register","Authentication")"><i class="fa fa-fw fa-laptop"></i>Register</a>
+                <a href="@Url.Action("Register","Authentication")">
+                  <i class="fa fa-fw fa-laptop"></i>Register
+                </a>
               </li>
             </ul>
           </li>
         }
-        
+
       </ul>
       <!-- /.navbar-collapse -->
     </div>
     <!-- /.container -->
-    
+
   </nav>
 
   <div class="container body-content">
