Adding Shopping Cart UI

--- a/Web/Views/Phone/Show.cshtml
+++ b/Web/Views/Phone/Show.cshtml
@@ -6,7 +6,9 @@
 <div class="row">
 
   <div class="col-md-4">
-    <p class="lead">@Model.Name</p>
+      <p class="lead">@Model.Name <p><a class="btn btn-info" href="#" id="addToCart" data-item-id="@Model.Id">
+    <i class="fa fa-shopping-cart fa-lg"></i> Add to Cart
+</a></p></p>
     <div class="thumbnail">
       <p>@Model.Description</p>
     </div>
