Adding View Cart Page and Checkout implementation

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
       <ul class="nav navbar-nav navbar-right top-nav">
           
           <li>
-              <a href='@Url.Action("Show", "Cart")'>
+              <a href='@Url.Action("ViewCart", "Checkout")'>
                   <i class="fa fa-shopping-cart"></i> Cart (<span id="cartItemCount">0</span>)
               </a>
           </li>
