--- a/Web/Views/Authentication/Login.cshtml
+++ b/Web/Views/Authentication/Login.cshtml
@@ -15,6 +15,7 @@
     <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
     <div class="col-sm-10">
       @Html.PasswordFor(m => m.Password, new { @class = "form-control", placholder = "Password" })
+      @Html.HiddenFor(m => m.ReturnUrl)
     </div>
   </div>
   <div class="form-group">
